fix: course search link and text overlap

--- a/lms/static/sass/_customer-specific.scss
+++ b/lms/static/sass/_customer-specific.scss
@@ -57,10 +57,6 @@ form#passwordreset-form .form-field.new_password2-new_password2 {
   display: none;
 }
 
-.search-results .search-results-item .result-type {
-  bottom: 50px;
-}
-
 .welcome-message a {
   text-decoration: underline;
 }
